# drift_agent

./: .env.example  .gitignore  PROACTIVE_CONTEXT.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-01-common-workspace-tools.md  2026-06-01-github-mcp-proactive.md  2026-06-01-plugin-system.md
drift_agent/: __init__.py
openspec/changes/add-tool-permissions/: design.md  proposal.md  tasks.md
openspec/changes/create-initial-agent-loop/: design.md  proposal.md  tasks.md
src/drift_agent/: __init__.py  cli.py  config.py  deepseek.py  events.py  loop.py  permissions.py  tools.py
src/drift_agent/agent/: __init__.py  context.py  hooks.py  loop.py  phases.py
src/drift_agent/drift/: __init__.py  runner.py  skills.py  state.py  tools.py  types.py
src/drift_agent/mcp/: __init__.py  client.py  config.py  registry.py
src/drift_agent/memory/: __init__.py  consolidation.py  extraction.py  llm.py  manager.py  markdown_store.py  optimizer.py  retrieval.py  sqlite_store.py  types.py  vector_store.py
src/drift_agent/plugins/: __init__.py  api.py  manager.py
src/drift_agent/proactive/: __init__.py  agent_tick.py  context.py  delivery.py  energy.py  sources.py  types.py
tests/: test_agent_turn_loop.py  test_cli.py  test_config.py  test_deepseek.py  test_drift_runner.py  test_drift_skills.py  test_drift_tools.py  test_loop.py  test_mcp_config.py  test_memory.py  test_permissions.py  test_plugins.py  test_proactive_agent_tick.py  test_proactive_energy.py  test_proactive_sources.py  test_runtime.py  test_tool_registry.py  test_tools.py  test_web_tools.py
(+13 files in other folders)
