[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-agent"
version = "0.1.0"
description = "Initial s01 agent loop skeleton."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
drift-agent = "drift_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
